--- a/TaskManager/appsettings.Development.json
+++ b/TaskManager/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataBase": "Server=./;Database=task-manager-db;User Id=root;Password=root"
   }
 }
